--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-redux": "5.0.7",
     "react-redux-form": "1.16.8",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.2",
     "reactstrap": "5.0.0",
     "redux": "3.7.2",
